Actualizado el menú en index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#">TALLER-D</a></li>
+                <li><a href="#">INICIO</a></li>
                 <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
