--- a/index.html
+++ b/index.html
@@ -17,14 +17,25 @@
                     <ul class="submenu">
                         <li><a href="#">PUBLICACIONES</a></li>
                         <li><a href="#">EVENTOS</a></li>
+                        <li><a href="#">EN COMÚN</a></li>
                     </ul>
                 </li>
                 <li>|</li>
                 <li><a href="#">BLOG</a></li>
                 <li>|</li>
-                <li><a href="#">GALERIA</a></li>
+                <li>
+                    <a href="#">GALERIA</a>
+                    <ul class="submenu">
+                        <li><a href="">PROYECTOS DESTACADOS</a></li>
+                    </ul>
+                </li>
                 <li>|</li>
-                <li><a href="#">TALLER-D VIRTUAL</a></li>
+                <li>
+                    <a href="#">TALLER-D VIRTUAL</a>
+                    <ul class="submenu">
+                        <li><a href="#">TALLER-D-WAREHOUSE</a></li>
+                    </ul>
+                </li>
                 <li>|</li>
                 <li><a href="#">CONTACTO</a></li>
             </ul>
