--- a/publicaciones.html
+++ b/publicaciones.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller-D | FAADU-UMSA</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <title>TALLER-D | PUBLICACIONES</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -38,22 +37,13 @@
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="contacto.html">CONTACTO</a></li>
+                <li><a href="#">CONTACTO</a></li>
             </ul>
         </nav>
-        <a href="login.html">  
-            <img src="logo2.png" alt="Logo" class="logo" id="logo2">
-        </a>
+        <img src="logo2.png" alt="Logo" class="logo" id="logo2">
     </header>
-    <div class="hero">
-        <img src="logo1.png" alt="Logo Hero" class="hero-logo">
-        <div class="hero-text">
-            TALLER DE APRENDIZAJE COLECTIVO<br>
-            FAADU - UMSA<br>
-            LA PAZ - BOLIVIA
-        </div>
-    </div>
-    
+    <h1>Bienvenido a TALLER-D</h1>
+    <p>Contenido de la página TALLER-D.</p>
     <script src="script.js"></script>
 </body>
 </html>
