--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li>
                     <a href="#">TALLER-D VIRTUAL</a>
                     <ul class="submenu">
-                        <li><a href="#">TALLER-D-WAREHOUSE</a></li>
+                        <li><a href="taller-virtual.html">TALLER-D-WAREHOUSE</a></li>
                     </ul>
                 </li>
                 <li>|</li>
