--- a/contacto.html
+++ b/contacto.html
@@ -53,6 +53,35 @@
             LA PAZ - BOLIVIA
         </div>
     </div>
+
+    <div class="contact-container">
+        <form class="contact-form">
+            <h2 class="form-title">Escríbenos</h2>
+            
+            <div class="form-group">
+                <input type="text" id="nombre" required>
+                <label for="nombre">Nombre</label>
+            </div>
+
+            <div class="form-group">
+                <input type="text" id="apellidos" required>
+                <label for="apellidos">Apellidos</label>
+            </div>
+
+            <div class="form-group">
+                <input type="email" id="email" required>
+                <label for="email">Correo Electrónico</label>
+            </div>
+
+            <div class="form-group">
+                <textarea id="mensaje" rows="5" required></textarea>
+                <label for="mensaje">Mensaje</label>
+            </div>
+
+            <button type="submit" class="submit-btn">Enviar</button>
+        </form>
+    </div>
+
     <footer class="footer fade-in">
         <div class="footer-content">
             <div class="row">
@@ -67,6 +96,7 @@
                         <a href="#">Teléfono:</a>
                         <ul id="direccion-submenu">     
                             <li><a href="#">(+591) 2-2484818</a></li>
+                            <li><a href="https://wa.me/59178945612" target="_blank" rel="noopener noreferrer">(+591) 78945612</a></li>
                         </ul>
                     </li>
                     <li>
@@ -98,7 +128,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>  
+    <script src="scridpt.js"></script>  
     <script src="contacto.js"></script>
 </body>
 </html>
