--- a/taller-virtual.html
+++ b/taller-virtual.html
@@ -57,67 +57,77 @@
             </div>
             <div class="card-container">
                 <div class="card">
-                    <iframe src="https://3dwarehouse.sketchup.com/embed/d9098796-7937-471d-8690-c06f9ffafee9?token=C1EShcWk55w=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
-                    <h2>TAC - Taller- D Romero_MIES_BACARDI CUBA</h2>
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/5a7c1f18-59c9-40c1-826e-791190065ab5?token=oxd10fLmryc=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Lopez LAPS ARQS-BALCON DEL CERRO</h2>
+                    <p>Modelo protocolizado realizado en etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumna Fernanda Lopez Bolivar</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
+                    </a>
+                </div>
+                <div class="card">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/19aa83cd-2dca-4795-aefa-f81e30bf7af2?token=bKmhEC0FZ5c=&binaryName=s22" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Calle SMUD ANA-EDIFICIO SUCRE</h2>
+                    <p>Modelo protocolizado realizado en etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumna Yassen Calle Chuyma</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
+                    </a>
+                </div>
+                <div class="card">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/434a716f-5133-4ee4-a49a-7e3127da7376?token=r7rmYOSjqNQ=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Apaza ALVAREZ ANGELA-BIBLIOTECA LP</h2>
+                    <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumna: Chantal Apaza Callizaya</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
+                    </a>
+                </div>
+                <div class="card">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/1ceb9f31-7c3f-4f01-b18f-45e516fd2da2?token=WfSEpz5MKnk=&binaryName=s22" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Coaquira SOMMET-U VIRTUAL</h2>
+                    <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumna Elim Coaquira Ramos</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
+                    </a>
+                </div>
+                <div class="card">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/f239b696-e316-41fd-8317-9446221b9a16?token=DgOExB67e3c=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Rivero BUNSHAFT LEVER</h2>
+                    <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumna Ana Rivero Atahuichi.</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
+                    </a>
+                </div>
+                <div class="card">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/d9098796-7937-471d-8690-c06f9ffafee9?token=dbyeHCWqT8o=&binaryName=s21" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Romero MIES BACARDI CUBA</h2>
                     <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumna Kiara Romero Larrea.</p>
                     <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
-                        <img src="image/download-rond.png" alt="Descargar archivo SketchUp" class="download-icon">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
                     </a>
                 </div>
                 <div class="card">
-                    <img src="image2.jpg" alt="Taller 2" class="card-image">
-                    <h2>Taller 2</h2>
-                    <p>Descripción breve del Taller 2.</p>
-                    <a href="material2.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/8ad70c71-cad1-47ce-b854-902b2094839e?token=SA4epVhhXRE=&binaryName=s22" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Ramos _TOMAS VILLALON_TEATRO PANGUIPULLI</h2>
+                    <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumno: Jean Paul Ramos Ramos.</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
                     </a>
                 </div>
-                <div class="card">
-                    <img src="image3.jpg" alt="Taller 3" class="card-image">
-                    <h2>Taller 3</h2>
-                    <p>Descripción breve del Taller 3.</p>
-                    <a href="material3.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
-                    </a>
-                </div>
-                <div class="card">
-                    <img src="image4.jpg" alt="Taller 4" class="card-image">
-                    <h2>Taller 4</h2>
-                    <p>Descripción breve del Taller 4.</p>
-                    <a href="material4.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
-                    </a>
-                </div>
-                <div class="card">
-                    <img src="image5.jpg" alt="Taller 5" class="card-image">
-                    <h2>Taller 5</h2>
-                    <p>Descripción breve del Taller 5.</p>
-                    <a href="material5.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
-                    </a>
-                </div>
-                <div class="card">
-                    <img src="image6.jpg" alt="Taller 6" class="card-image">
-                    <h2>Taller 6</h2>
-                    <p>Descripción breve del Taller 6.</p>
-                    <a href="material6.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
-                    </a>
-                </div>
-                <div class="card">
-                    <img src="image7.jpg" alt="Taller 7" class="card-image">
-                    <h2>Taller 7</h2>
-                    <p>Descripción breve del Taller 7.</p>
-                    <a href="material7.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
-                    </a>
-                </div>
-                <div class="card">
-                    <img src="image8.jpg" alt="Taller 8" class="card-image">
-                    <h2>Taller 8</h2>
-                    <p>Descripción breve del Taller 8.</p>
-                    <a href="material8.pdf" class="download-btn" target="_blank" rel="noopener noreferrer">
-                        <img src="download-icon.png" alt="Descargar" class="download-icon">
+
+                <!--plantilla-->
+                <div class="card hidden">
+                    <iframe src="https://3dwarehouse.sketchup.com/embed/8ad70c71-cad1-47ce-b854-902b2094839e?token=SA4epVhhXRE=&binaryName=s22" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
+                    <h2>TAC - Taller-D Ramos _TOMAS VILLALON_TEATRO PANGUIPULLI</h2>
+                    <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumno: Jean Paul Ramos Ramos.</p>
+                    <a href="public-taller-d/ware/Romero+_MIES_BACARDI+CUBA.skp" download="Romero+_MIES_BACARDI+CUBA.skp">
+                        <img src="image/download-rond.png" alt="#" class="download-icon">
+                        <span>Descargar archivo SketchUp</span>
                     </a>
                 </div>
             </div>
