--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <ul class="menu">
                 <li><a href="#">INICIO</a></li>
                 <li>|</li>
+                    <a href="equipo.html">EQUIPO</a>
+                </li>
+                <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
                     <ul class="submenu">
