--- a/taller-virtual.html
+++ b/taller-virtual.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller-D | VIRTUAL</title>
+    <title>Taller-D | Virtual</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="taller-virtual.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -121,7 +121,7 @@
                 </div>
 
                 <!--plantilla-->
-                <div class="card hidden">
+                <div class="card hidde">
                     <iframe src="https://3dwarehouse.sketchup.com/embed/8ad70c71-cad1-47ce-b854-902b2094839e?token=SA4epVhhXRE=&binaryName=s22" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" width="580" height="326" allowfullscreen></iframe>
                     <h2>TAC - Taller-D Ramos _TOMAS VILLALON_TEATRO PANGUIPULLI</h2>
                     <p>Modelo protocolizado realizado en  etapa de (Re)Construcción del Proceso Proyectual del Taller D _ UMSA_La Paz Bolivia. Alumno: Jean Paul Ramos Ramos.</p>
