--- a/contacto.html
+++ b/contacto.html
@@ -54,8 +54,16 @@
         </div>
     </div>
 
-    <div class="contact-container">
-        <form class="contact-form">
+    <main>
+        <div class="contact-container">
+            <div class="info-box">
+                <h2 class="info-title">Hagamos arquitectura juntos</h2>
+                <p class="info-text">
+                    En el Taller-D, creemos en la colaboración y el intercambio de conocimientos. Nos encantaría conectarnos contigo, ya seas estudiante, profesional o simplemente alguien apasionado por la arquitectura y el diseño experimental. 
+                </p>
+            </div>
+    
+            <form class="contact-form">
             <h2 class="form-title">Escríbenos</h2>
             
             <div class="form-group">
@@ -79,8 +87,9 @@
             </div>
 
             <button type="submit" class="submit-btn">Enviar</button>
-        </form>
-    </div>
+            </form>
+        </div>
+    </main>
 
     <footer class="footer fade-in">
         <div class="footer-content">
