--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    </div>
     <header>
         <nav>
             <ul class="menu">
@@ -58,5 +59,5 @@
     </div>
     
     <script src="script.js"></script>
-</body>
+    </body>
 </html>
