--- a/contacto.html
+++ b/contacto.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller-D | Contacto</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="contacto.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Taller-D | Contacto</title>
+        <link rel="icon" href="favicon.png" type="image/x-icon">
+        <link rel="stylesheet" href="contacto.css">
+        <link rel="stylesheet" href="equipo.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
 <body>
     <header>
         <nav>
             <ul class="menu">
                 <li><a href="index.html">INICIO</a></li>
                 <li>|</li>
+                    <a href="equipo.html">EQUIPO</a>
+                </li>
+                <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
                     <ul class="submenu">
                         <li><a href="publicaciones.html">PUBLICACIONES</a></li>
-                        <li><a href="#">EVENTOS</a></li>
-                        <li><a href="#">EN COMÚN</a></li>
+                        <li><a href="eventos.html">EVENTOS</a></li>
+                        <li><a href="en-comun.html">EN COMÚN</a></li>
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li>|</li>
                 <li>
-                    <a href="#">GALERIA</a>
+                    <a href="#"">GALERIA</a>
                     <ul class="submenu">
                         <li><a href="">PROYECTOS DESTACADOS</a></li>
                     </ul>
@@ -35,7 +39,7 @@
                 <li>
                     <a href="#">TALLER-D VIRTUAL</a>
                     <ul class="submenu">
-                        <li><a href="#">TALLER-D-WAREHOUSE</a></li>
+                        <li><a href="taller-virtual.html">TALLER-D-WAREHOUSE</a></li>
                     </ul>
                 </li>
                 <li>|</li>
@@ -137,7 +141,7 @@
         </div>
     </footer>
 
-    <script src="scridpt.js"></script>  
+    <script src="script.js"></script>  
     <script src="contacto.js"></script>
 </body>
 </html>
