--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
                 <li>|</li>
                     <a href="equipo.html">EQUIPO</a>
                 </li>
@@ -22,11 +22,11 @@
                     <ul class="submenu">
                         <li><a href="publicaciones.html">PUBLICACIONES</a></li>
                         <li><a href="#">EVENTOS</a></li>
-                        <li><a href="#">EN COMÚN</a></li>
+                        <li><a href="en-comun.html">EN COMÚN</a></li>
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li>|</li>
                 <li>
                     <a href="#">GALERIA</a>
