--- a/publicaciones.html
+++ b/publicaciones.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TALLER-D | PUBLICACIONES</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="equipo.css">
 </head>
 <body>
     <header>
         <nav>
             <ul class="menu">
-                <li><a href="#">INICIO</a></li>
+                <li><a href="index.html">INICIO</a></li>
+                <li>|</li>
+                    <a href="equipo.html">EQUIPO</a>
+                </li>
                 <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
@@ -21,7 +24,7 @@
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li>|</li>
                 <li>
                     <a href="#">GALERIA</a>
@@ -33,17 +36,18 @@
                 <li>
                     <a href="#">TALLER-D VIRTUAL</a>
                     <ul class="submenu">
-                        <li><a href="#">TALLER-D-WAREHOUSE</a></li>
+                        <li><a href="taller-virtual.html">TALLER-D-WAREHOUSE</a></li>
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="#">CONTACTO</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
+        </nav>
         </nav>
         <img src="logo2.png" alt="Logo" class="logo" id="logo2">
     </header>
     <h1>Bienvenido a TALLER-D</h1>
     <p>Contenido de la página TALLER-D.</p>
-    <script src="script.js"></script>
+    <script src="equipo.js"></script>
 </body>
 </html>
