--- a/taller-virtual.html
+++ b/taller-virtual.html
@@ -6,6 +6,7 @@
     <title>Taller-D | Virtual</title>
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="taller-virtual.css">
+    <link rel="stylesheet" href="equipo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -13,6 +14,9 @@
         <nav>
             <ul class="menu">
                 <li><a href="index.html">INICIO</a></li>
+                <li>|</li>
+                    <a href="equipo.html">EQUIPO</a>
+                </li>
                 <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
@@ -23,7 +27,7 @@
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li>|</li>
                 <li>
                     <a href="#">GALERIA</a>
@@ -35,7 +39,7 @@
                 <li>
                     <a href="#">TALLER-D VIRTUAL</a>
                     <ul class="submenu">
-                        <li><a href="#">TALLER-D-WAREHOUSE</a></li>
+                        <li><a href="taller-virtual.html">TALLER-D-WAREHOUSE</a></li>
                     </ul>
                 </li>
                 <li>|</li>
@@ -50,7 +54,7 @@
     <main>
         <div class="content-container">
             <h1>Taller Virtual</h1>
-            <p>Explora nuestros talleres virtuales y descarga los materiales necesarios.</p>
+            <h2>Explora nuestros talleres virtuales y descarga los materiales necesarios.</h2>
 
             <div class="iframe-container">
             
@@ -135,6 +139,6 @@
     </main>
 
     <script src="script.js"></script>  
-    <script src="contacto.js"></script>
+    <script src="equipo.js"></script>
 </body>
 </html>
