--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="blog.html">BLOG</a></li>
                 <li>|</li>
                 <li>
-                    <a href="#">GALERIA</a>
+                    <a href="">GALERIA</a>
                     <ul class="submenu">
                         <li><a href="">PROYECTOS DESTACADOS</a></li>
                     </ul>
@@ -45,8 +45,9 @@
                 <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
-        <a href="login.html">  
+        <a href="login.html" class="logo-container">
             <img src="logo2.png" alt="Logo" class="logo" id="logo2">
+            <span class="tooltip">Iniciar sesión</span>
         </a>
     </header>
     <div class="hero">
