--- a/taller-virtual.html
+++ b/taller-virtual.html
@@ -23,7 +23,7 @@
                     <ul class="submenu">
                         <li><a href="publicaciones.html">PUBLICACIONES</a></li>
                         <li><a href="#">EVENTOS</a></li>
-                        <li><a href="#">EN COMÚN</a></li>
+                        <li><a href="en-comun.html">EN COMÚN</a></li>
                     </ul>
                 </li>
                 <li>|</li>
