--- a/contacto.html
+++ b/contacto.html
@@ -61,7 +61,8 @@
     <main>
         <div class="contact-container">
             <div class="info-box">
-                <h2 class="info-title">Hagamos arquitectura juntos</h2>
+                <img src="logo1.png" alt="Logo 1" class="logo1">
+                <h2 class="info-title">| Más que un taller |</h2>
                 <p class="info-text">
                     En el Taller-D, creemos en la colaboración y el intercambio de conocimientos. Nos encantaría conectarnos contigo, ya seas estudiante, profesional o simplemente alguien apasionado por la arquitectura y el diseño experimental. 
                 </p>
