--- a/entregas.html
+++ b/entregas.html
@@ -279,6 +279,13 @@
             width: 100%;
         }
 
+        h1 {
+            color: var(--secondary-color);
+            font-family: 'Futura', sans-serif;
+            font-size: 24px;
+            font-weight: 100;
+        }
+
     </style>
 </head>
 <body>
@@ -292,7 +299,7 @@
             <li><a href="cronograma.html"><i class="fas fa-calendar"></i> Cronograma</a></li>
             <li><a href="entregas.html"><i class="fas fa-tasks"></i> Entregas</a></li>
             <li><a href="material.html"><i class="fas fa-book"></i> Material de proyecto</a></li>
-            <li><a href="foro.html"><i class="fas fa-comments"></i> TAC-FORO</a></li>
+            <li><a href="tac-foro.html"><i class="fas fa-comments"></i> TAC-FORO</a></li>
             <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
         </ul>
     </div>
@@ -468,7 +475,7 @@
             </div>
         </div>
     </div>
-</body>
+
    
 
     <script>
@@ -596,4 +603,5 @@
             }
         });
     </script>
+</body>
 </html>
