--- a/dashboard.html
+++ b/dashboard.html
@@ -281,7 +281,7 @@
 
         #userName {
             font-weight: bold;
-            color: #333;
+            color: #ffffff;
         }
 
         /* Si decides incluir la imagen de perfil */
@@ -329,7 +329,7 @@
         }
 
         .user-email {
-            color: #666;
+            color: #ffffff;
             font-size: 0.8em;
         }
 
