--- a/dashboard.html
+++ b/dashboard.html
@@ -324,7 +324,7 @@
 
         .user-name {
             font-weight: bold;
-            color: #333;
+            color: #ffffff;
             font-size: 1.1em;
         }
 
