--- a/dashboard.html
+++ b/dashboard.html
@@ -294,10 +294,10 @@
             <li><a href="dashboard.html"><i class="fas fa-user"></i> Inicio</a></li>
             <li><a href="perfil.html"><i class="fas fa-user"></i> Perfil</a></li>
             <li><a href="cronograma.html"><i class="fas fa-calendar"></i> Cronograma</a></li>
-            <li><a href="entregas.html">5<i class="fas fa-tasks"></i> Entregas</a></li>
+            <li><a href="entregas.html"><i class="fas fa-tasks"></i> Entregas</a></li>
             <li><a href="material.html"><i class="fas fa-book"></i> Material de proyecto</a></li>
             <li><a href="tac-foro.html"><i class="fas fa-comments"></i> TAC-FORO</a></li>
-            <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
+            <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
         </ul>
     </div>
 
@@ -378,6 +378,12 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div style="text-align: center; margin: 20px;">
+        <a href="dashboard-docente.html" class="btn btn-primary" style="font-family: 'Futura', sans-serif; text-transform: uppercase; letter-spacing: 2px; font-size: 14px; padding: 10px 20px;">
+            Dashboard Docente
+        </a>
     </div>
 
      
