--- a/tac-foro.html
+++ b/tac-foro.html
@@ -136,7 +136,7 @@
             <li><a href="entregas.html"><i class="fas fa-tasks"></i> Entregas</a></li>
             <li><a href="material.html"><i class="fas fa-book"></i> Material de proyecto</a></li>
             <li><a href="tac-foro.html"><i class="fas fa-comments"></i> TAC-FORO</a></li>
-            <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
+            <li><a href="index.html"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</a></li>
         </ul>
     </div>
     
