--- a/taller-virtual.html
+++ b/taller-virtual.html
@@ -16,23 +16,28 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li>|</li>
                     <a href="equipo.html">EQUIPO</a>
-                </li>
+    
                 <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
                     <ul class="submenu">
                         <li><a href="publicaciones.html">PUBLICACIONES</a></li>
-                        <li><a href="#">EVENTOS</a></li>
+                        <li><a href="eventos.html">EVENTOS</a></li>
                         <li><a href="en-comun.html">EN COMÚN</a></li>
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="blog.html">BLOG</a></li>
+                <li>
+                    <a href="blog.html">EXPRESS</a>
+                    <ul class="submenu">
+                        <li><a href="#">BOLETÍN ACADÉMICO</a></li>
+                    </ul>
+                </li>
                 <li>|</li>
                 <li>
-                    <a href="#">GALERIA</a>
+                    <a href="galeria.html">GALERIA</a>
                     <ul class="submenu">
-                        <li><a href="">PROYECTOS DESTACADOS</a></li>
+                        <li><a href="#">PROYECTOS DESTACADOS</a></li>
                     </ul>
                 </li>
                 <li>|</li>
