--- a/equipo.html
+++ b/equipo.html
@@ -15,7 +15,7 @@
                 <li><a href="index.html">INICIO</a></li>
                 <li>|</li>
                     <a href="equipo.html">EQUIPO</a>
-                </li>
+    
                 <li>|</li>
                 <li>
                     <a href="#">NOTICIAS</a>
@@ -26,12 +26,17 @@
                     </ul>
                 </li>
                 <li>|</li>
-                <li><a href="blog.html">BLOG</a></li>
+                <li>
+                    <a href="blog.html">EXPRESS</a>
+                    <ul class="submenu">
+                        <li><a href="#">BOLETÍN ACADÉMICO</a></li>
+                    </ul>
+                </li>
                 <li>|</li>
                 <li>
-                    <a href="#">GALERIA</a>
+                    <a href="galeria.html">GALERIA</a>
                     <ul class="submenu">
-                        <li><a href="proyectos-destacados.html">PROYECTOS DESTACADOS</a></li>
+                        <li><a href="#">PROYECTOS DESTACADOS</a></li>
                     </ul>
                 </li>
                 <li>|</li>
