--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taller-D | Express</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="blog.css">
     <link rel="stylesheet" href="equipo.css">
     <link rel="stylesheet" href="style.css">
