--- a/galeria.html
+++ b/galeria.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taller-D | Equipo</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <title>Taller-D | Proyectos destacados</title>
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="equipo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
