--- a/dashboard-docente.html
+++ b/dashboard-docente.html
@@ -42,6 +42,13 @@
             color: white;
         }
 
+        h3 {
+            font-family: 'Futura', sans-serif;
+            font-size: 24px;
+            color: white;
+            padding-left: 400px;
+        }
+
         .sidebar {
             font-size: 11px;
             text-transform: uppercase;
@@ -382,6 +389,24 @@
                     <button id="addSolutionButton">Agregar Solución</button>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="dashboard-card">
+        <div class="card-icon"><i class="fas fa-chart-line"></i></div>
+        <h3>Tablero de Visualización | Miro Board - Espacio de trabajo colaborativo</h3>
+        
+        <div class="miro-container" style="width: 100%; height: 500px; overflow: hidden; border-radius: 8px; padding:10px; padding-left: 300px;">
+            <iframe 
+                width="768" 
+                height="432" 
+                src="https://miro.com/app/live-embed/uXjVL-_8O3E=/?moveToViewport=-1677,-817,4275,2046&embedId=110824619007" 
+                frameborder="0" 
+                scrolling="no" 
+                allow="fullscreen; clipboard-read; clipboard-write" 
+                allowfullscreen
+                style="width: 100%; height: 100%; border: none;">
+            </iframe>
         </div>
     </div>
 
