--- a/dashboard-docente.html
+++ b/dashboard-docente.html
@@ -32,7 +32,7 @@
             font-family: 'Futura', sans-serif;
             font-size: 14px;
             font-weight: 100;
-            color: #ffffff;
+            color: #808080;
             margin-top: 40;
         }
 
@@ -46,7 +46,14 @@
             font-family: 'Futura', sans-serif;
             font-size: 24px;
             color: white;
-            padding-left: 400px;
+            padding-left: 50px;
+        }
+
+        h7 {
+            font-family: 'Futura', sans-serif;
+            font-size: 24px;
+            color: white;
+            padding-left: 275px;
         }
 
         .sidebar {
@@ -162,6 +169,8 @@
             color: #ffffff;
             background: #ffffff33;
             backdrop-filter: blur(10px);
+            width: 490px;
+            height: 280px;
             border-radius: 10px;
             padding: 20px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -392,13 +401,13 @@
         </div>
     </div>
 
-    <div class="dashboard-card">
-        <div class="card-icon"><i class="fas fa-chart-line"></i></div>
-        <h3>Tablero de Visualización | Miro Board - Espacio de trabajo colaborativo</h3>
+    <div class="dashboard-card-miro">
+        <div class="card-icon"><i class="fas fa-chart-line"></i></div>    
+        <h7>Tablero de Visualización | Miro Board - Espacio de trabajo colaborativo</h7>
         
-        <div class="miro-container" style="width: 100%; height: 500px; overflow: hidden; border-radius: 8px; padding:10px; padding-left: 300px;">
+        <div class="miro-container" style="width: 100%; height: 500px; overflow: hidden; border-radius: 8px; padding:40px; padding-left: 270px;">
             <iframe 
-                width="768" 
+                width="400" 
                 height="432" 
                 src="https://miro.com/app/live-embed/uXjVL-_8O3E=/?moveToViewport=-1677,-817,4275,2046&embedId=110824619007" 
                 frameborder="0" 
