--- a/login.html
+++ b/login.html
@@ -7,6 +7,8 @@
     <title>TAC-D | Iniciar Sesión</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="609812063852-o48rdsd95u63mgjikg5e4ug48d7k0l5u.apps.googleusercontent.com">
     <style>
         @font-face {
             font-family: 'Futura';
@@ -192,6 +194,40 @@
                 }
             );
         };
+
+        function onSignIn(googleUser) {
+            // Obtener el perfil del usuario
+            const profile = googleUser.getBasicProfile();
+            
+            // Obtener datos relevantes
+            const userData = {
+                id: profile.getId(),
+                name: profile.getName(),
+                email: profile.getEmail(),
+                imageUrl: profile.getImageUrl()
+            };
+
+            // Guardar datos del usuario en localStorage
+            localStorage.setItem('userProfile', JSON.stringify(userData));
+
+            // Determinar la página de redirección basada en el dominio del correo
+            if (userData.email.endsWith('@docente.umsa.bo')) {
+                window.location.href = 'dashboard-docente.html';
+            } else if (userData.email.endsWith('@umsa.bo')) {
+                window.location.href = 'dashboard.html';
+            } else {
+                alert('Por favor, utiliza un correo institucional de la UMSA');
+                signOut();
+            }
+        }
+
+        function signOut() {
+            const auth2 = gapi.auth2.getInit();
+            auth2.signOut().then(function () {
+                localStorage.removeItem('userProfile');
+                console.log('Usuario desconectado');
+            });
+        }
     </script>
 
     
