--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
      
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="609812063852-o48rdsd95u63mgjikg5e4ug48d7k0l5u.apps.googleusercontent.com">
+    <script>
+        function onSignIn(googleUser) {
+            var profile = googleUser.getBasicProfile();
+            document.getElementById('user-name').innerText = profile.getName();
+            document.getElementById('user-avatar').src = profile.getImageUrl();
+            document.getElementById('user-info').style.display = 'flex';
+        }
+    </script>
     <style>
          
         :root {
@@ -305,9 +315,9 @@
     <div class="sidebar">
         <div class="sidebar-header">
             <img src="logo1.png" alt="Logo">
-            <div class="user-info">
-                <img src="image/perfil.jpg" alt="User Avatar" class="user-avatar">
-                <h4>Bienvenida, Diana Carolina</h4>
+            <div class="user-info" id="user-info" style="display: none;">
+                <img id="user-avatar" class="user-avatar" alt="User Avatar">
+                <h4 id="user-name">Bienvenido</h4>
                 <h6 class="user-role">Estudiante</h6>
             </div>
         </div>
