--- a/login.html
+++ b/login.html
@@ -132,18 +132,18 @@
                 .then(response => response.json())
                 .then(data => {
                     validEmails = data.valid_emails;
+
+                    if (validateEmail(email) && validEmails.includes(email)) {
+                        console.log("ID: " + responsePayload.sub);
+                        console.log('Full Name: ' + responsePayload.name);
+                        console.log('Email: ' + responsePayload.email);
+                        console.log('Picture: ' + responsePayload.picture);
+                        window.location.href = 'dashboard.html';
+                    } else {
+                        alert("El correo electrónico no está autorizado para ingresar.");
+                    }
                 })
                 .catch(error => console.error('Error al cargar la lista de correos:', error));
-
-            if (validateEmail(email)) {
-                console.log("ID: " + responsePayload.sub);
-                console.log('Full Name: ' + responsePayload.name);
-                console.log('Email: ' + responsePayload.email);
-                console.log('Picture: ' + responsePayload.picture);
-                window.location.href = 'dashboard.html';
-            } else {
-                alert("El correo electrónico no está autorizado para ingresar.");
-            }
         }
 
         function decodeJwtResponse(token) {
